Fixed makefile and aspect ratio

--- a/preamble.tex
+++ b/preamble.tex
@@ -3,7 +3,7 @@
 		pageanchor=false,
 		bookmarks=false,
 		pdfpagelabels=false},
-	% aspectratio=169,
+	aspectratio=169,
 	]{beamer}
 \usepackage{pgfpages}									% for producing notes
 % \setbeameroption{show notes on second screen}
