--- a/preamble.tex
+++ b/preamble.tex
@@ -18,7 +18,7 @@
 %\setbeamercolor{normal text}{fg=anthrazit}
 \usepackage{caption}									% Use \captionof
 \usepackage{tikz}
-\usetikzlibrary{shapes,arrows}
+\usetikzlibrary{shapes,arrows.meta}
 \usetikzlibrary{calc}
 \usepackage{amsmath}									% Use of align which is assumer superior to eqnarray
 \usepackage{tabularx}									% Needed for using align in tabular-environment
