Added threads to validity

--- a/CS453_Team6_PaperPresentation.tex
+++ b/CS453_Team6_PaperPresentation.tex
@@ -132,8 +132,25 @@
 %---------------------------------
 \section{Threads to Validity}
 	\begin{frame}{Threads to Validity}
-		TtV
+		\begin{itemize}
+			\item Only one system analysed
+			\item Simpler bugs easier to find and fix
+			\item Rather simple system
+			\item Subjective identification of bugs
+		\end{itemize}
 	\end{frame}
+
+	\note[itemize]{
+		Risk of no generalisation (however rise of use of similar systems)
+
+		Popularity suggests most severe bugs fixed; simple bugs predominate complex systems
+
+		Control loop design; complex architecture bugs less likely to find in simulation?
+
+		Manual selection; bias?; voting system
+
+		Generally: releasing dataset, analysis results publicly
+	}
 
 %---------------------------------
 % Section Conclusion \& Future work
